manifests/ocp/tigera-policies.yaml

# Allow the Kubernetes API Server access to Calico Enterprise API Server.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.cnx-apiserver-access
  namespace: tigera-system
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-apiserver'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      # This policy allows Calico Enterprise API Server access from anywhere: replace it with
      # the IPv4 addresses of your Kubernetes API Servers if those are static.
      nets: ["0.0.0.0/0"]
    destination:
      # The ports Calico Enterprise API Server and Calico Enterprise Query Server are configured to listen on.
      ports: [443, 5443, 8080, 10443]
  - action: Allow
    protocol: TCP
    source:
      # This policy allows Calico Enterprise API Server access from anywhere: replace it with
      # the IPv6 addresses of your Kubernetes API Servers if those are static.
      nets: ["::/0"]
    destination:
      # The ports Calico Enterprise API Server and Calico Enterprise Query Server are configured to listen on.
      ports: [443, 5443, 8080, 10443]
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows tigera api-server to communicate with kubernetes api server.
      namespaceSelector: projectcalico.org/name == 'default'
      selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
      # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
      # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
      ports: [443, 6443, 12388]
  # Pass to subsequent tiers for further enforcement
  - action: Pass

---

# Allow users to access Calico Enterprise Manager.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.manager-access
  namespace: tigera-manager
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-manager'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      # This policy allows IPv4 access to Calico Enterprise Manager from anywhere: narrow it down if
      # only certain subnets should be allowed.
      nets: ["0.0.0.0/0"]
    destination:
      # By default, Calico Enterprise Manager is accessed over https. Update this if needed.
      ports: [9443]
  - action: Allow
    protocol: TCP
    source:
      # This policy allows IPv6 access to Calico Enterprise Manager from anywhere: narrow it down if
      # only certain subnets should be allowed.
      nets: ["::/0"]
    destination:
      # By default, Calico Enterprise Manager is accessed over https. Update this if needed.
      ports: [9443]
  - action: Allow
    protocol: TCP
    source: {}
    # This policy is used for multi-cluster management to establish a tunnel from another cluster: narrow it down if
    # only certain subnets should be allowed.
    destination:
      ports: [9449]
  egress:
  - action: Allow
    protocol: TCP
    source: {}
    destination:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      ports: [5554]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with tigera-compliance.
      namespaceSelector: projectcalico.org/name == 'tigera-compliance'
      selector: k8s-app == 'compliance-server'
      ports: [5443]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule allows to communicate with tigera-dex.
      namespaceSelector: projectcalico.org/name == 'tigera-dex'
      selector: k8s-app == 'tigera-dex'
      ports: [5556]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with tigera-packetcapture.
      namespaceSelector: projectcalico.org/name == 'tigera-packetcapture'
      selector: k8s-app == 'tigera-packetcapture'
      ports: [8444]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows egress to the kubernetes api server.
      services:
        name: kubernetes
        namespace: default
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      selector: prometheus == "calico-node-prometheus"
      namespaceSelector: projectcalico.org/name == 'tigera-prometheus'
      ports: [9095]
---

# Allow internal communication from compliance-benchmarker, compliance-controller, compliance-snapshotter, compliance-reporter
# to apiserver, coredns and elasticsearch.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.compliance-access
  namespace: tigera-compliance
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'compliance-benchmarker' || k8s-app == 'compliance-controller' || k8s-app == 'compliance-snapshotter' || k8s-app == 'compliance-reporter'
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows egress to the kubernetes api server.
      services:
        name: kubernetes
        namespace: default
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      ports: [5554]
---

# Allow internal communication to compliance-server from Manager.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.compliance-server
  namespace: tigera-compliance
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'compliance-server'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: k8s-app == 'tigera-manager'
      namespaceSelector: name == 'tigera-manager'
    destination:
      ports: [5443]
  egress:
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows egress to the kubernetes api server.
      services:
        name: kubernetes
        namespace: default
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      selector: k8s-app == 'tigera-secure-es-gateway'
      ports: [5554]
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule allows to communicate with tigera-dex.
      namespaceSelector: projectcalico.org/name == 'tigera-dex'
      selector: k8s-app == 'tigera-dex'
      ports: [5556]
  # compliance-server does RBAC checks for managed cluster compliance reports
  # via guardian.
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule allows to communicate with tigera-manager
      namespaceSelector: projectcalico.org/name == 'tigera-manager'
      selector: k8s-app == 'tigera-manager'
      ports: [9443]

---

# This manifest creates a network policy to allow traffic to Alertmanager
# (TCP port 9093).
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.calico-node-alertmanager
  namespace: tigera-prometheus
spec:
  order: 1
  tier: allow-tigera
  selector: (app == 'alertmanager' && alertmanager == 'calico-node-alertmanager') || (app.kubernetes.io/name == 'alertmanager' && alertmanager == 'calico-node-alertmanager')
  types:
    - Ingress
    - Egress
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [9093]
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  # This rule allows all kind of egress traffic from AlertManager.
  # recommended to customize egress flow, based on configuration.
  - action: Allow
    protocol: TCP

---

# This manifest creates a network policy to allow traffic between
# Alertmanagers for HA configuration (TCP port 6783).
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.calico-node-alertmanager-mesh
  namespace: tigera-prometheus
spec:
  order: 1
  tier: allow-tigera
  selector: (app == 'alertmanager' && alertmanager == 'calico-node-alertmanager') || (app.kubernetes.io/name == 'alertmanager' && alertmanager == 'calico-node-alertmanager')
  types:
    - Ingress
    - Egress
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      selector: (app == 'alertmanager' && alertmanager == 'calico-node-alertmanager') || (app.kubernetes.io/name == 'alertmanager' && alertmanager == 'calico-node-alertmanager')
      ports: [9094]
  - action: Allow
    protocol: UDP
    destination:
      selector: (app == 'alertmanager' && alertmanager == 'calico-node-alertmanager') || (app.kubernetes.io/name == 'alertmanager' && alertmanager == 'calico-node-alertmanager')
      ports: [9094]
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: (app == 'alertmanager' && alertmanager == 'calico-node-alertmanager') || (app.kubernetes.io/name == 'alertmanager' && alertmanager == 'calico-node-alertmanager')
      ports: [9094]
  - action: Allow
    protocol: UDP
    destination:
      selector: (app == 'alertmanager' && alertmanager == 'calico-node-alertmanager') || (app.kubernetes.io/name == 'alertmanager' && alertmanager == 'calico-node-alertmanager')
      ports: [9094]
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
---

# This manifest creates a network policy to allow traffic to access the
# Prometheus (TCP port 9095).
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.prometheus
  namespace: tigera-prometheus
spec:
  order: 1
  tier: allow-tigera
  selector: (app == 'prometheus' && prometheus == 'calico-node-prometheus') || (app.kubernetes.io/name == 'prometheus' && prometheus == 'calico-node-prometheus')
  types:
    - Ingress
    - Egress
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [9095]
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows prometheus to communicate with kubernetes api server.
      namespaceSelector: projectcalico.org/name == 'default'
      selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
      # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
      # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
      ports: [443, 6443, 12388]
  - action: Allow
    protocol: TCP
    destination:
      # Egress access for Felix metrics
      ports: [9081, 9091]
  - action: Allow
    protocol: TCP
    destination:
      # Egress access for BGP metrics
      ports: [9900]
  - action: Allow
    protocol: TCP
    destination:
      # Egress access to alertmanager
      selector: (app == 'alertmanager' && alertmanager == 'calico-node-alertmanager') || (app.kubernetes.io/name == 'alertmanager' && alertmanager == 'calico-node-alertmanager')
      ports: [9093]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule allows to communicate with tigera-dex.
      namespaceSelector: projectcalico.org/name == 'tigera-dex'
      selector: k8s-app == 'tigera-dex'
      ports: [5556]
---

# This manifest creates a network policy to allow traffic to access through tigera-prometheus-api.
# reaching prometheus ins
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.tigera-prometheus-api
  namespace: tigera-prometheus
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-prometheus-api'
  types:
    - Ingress
    - Egress
  ingress:
    # for incoming connections from the kube-apiserver
  - action: Allow
    protocol: TCP
    destination:
      ports: [9095]
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    # Egress access for tigera-prometheus-service
    # to access the prometheus instance
    protocol: TCP
    destination:
      selector: prometheus == "calico-node-prometheus"
      ports: [9095]
---

# This manifest creates a network policy to allow the prometheus-operator
# to access the kube-apiserver
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.prometheus-operator
  namespace: tigera-prometheus
spec:
  order: 1
  tier: allow-tigera
  selector: operator == 'prometheus'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        # This rule allows to communicate with openshift-dns in udp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This rule allows to communicate with openshift-dns in tcp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This egress rule in this policy allows prometheus-operator to communicate with kubernetes api server.
        namespaceSelector: projectcalico.org/name == 'default'
        selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
        # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
        # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
        ports: [443, 6443, 12388]
---

# Allow access to ES Gateway from components that need to talk to Elasticsearch or Kibana.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.es-gateway-access
  namespace: tigera-elasticsearch
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-secure-es-gateway'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'fluentd-node' || k8s-app == 'fluentd-node-windows'
        namespaceSelector: name == 'tigera-fluentd'
      destination:
        ports: [5554]
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'eks-log-forwarder'
        namespaceSelector: name == 'tigera-fluentd'
      destination:
        ports: [5554]
    - action: Allow
      protocol: TCP
      source:
        selector: job-name == 'intrusion-detection-es-job-installer'
        namespaceSelector: projectcalico.org/name == 'tigera-intrusion-detection'
      destination:
        ports: [5554]
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'elastic-curator'
        namespaceSelector: name == 'tigera-elasticsearch'
      destination:
        ports: [5554]
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'tigera-manager'
        namespaceSelector: name == 'tigera-manager'
      destination:
        ports: [5554]
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'compliance-benchmarker'
        namespaceSelector: name == 'tigera-compliance'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'compliance-controller'
        namespaceSelector: name == 'tigera-compliance'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'compliance-server'
        namespaceSelector: name == 'tigera-compliance'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'compliance-snapshotter'
        namespaceSelector: name == 'tigera-compliance'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'compliance-reporter'
        namespaceSelector: name == 'tigera-compliance'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'intrusion-detection-controller'
        namespaceSelector: projectcalico.org/name == 'tigera-intrusion-detection'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'elastic-operator'
        namespaceSelector: name == 'tigera-eck-operator'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'tigera-elasticsearch-metrics'
        namespaceSelector: name == 'tigera-elasticsearch'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      source:
        selector: k8s-app == 'tigera-dpi'
        namespaceSelector: name == 'tigera-dpi'
    - action: Allow
      destination:
        ports: [5554]
      protocol: TCP
      # The operator needs access to Elasticsearch and Kibana (through ES Gateway), however, since the operator is on the
      # hostnetwork it's hard to create specific network policies for it.
      # If the node CIDRs are known they can be added to this rule to restrict access to just the nodes in the cluster
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule allows to communicate with tigera-dex.
      namespaceSelector: projectcalico.org/name == 'tigera-dex'
      selector: k8s-app == 'tigera-dex'
      ports: [5556]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows egress to the kubernetes api server.
      services:
        name: kubernetes
        namespace: default
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      selector: elasticsearch.k8s.elastic.co/cluster-name == 'tigera-secure'
      ports: [9200]
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: projectcalico.org/name == 'tigera-kibana'
      selector: k8s-app == 'tigera-secure'
      ports: [5601]
---

# Allow access to Elasticsearch client nodes from Kibana, ECK Operator and ES Gateway.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.elasticsearch-access
  namespace: tigera-elasticsearch
spec:
  order: 1
  tier: allow-tigera
  selector: elasticsearch.k8s.elastic.co/cluster-name == 'tigera-secure'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: k8s-app == 'tigera-secure'
      namespaceSelector: name == 'tigera-kibana'
    destination:
      ports: [9200]
  - action: Allow
    protocol: TCP
    source:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: name == 'tigera-elasticsearch'
    destination:
      ports: [9200]
  - action: Allow
    destination:
      ports: [9200]
    protocol: TCP
    source:
      selector: k8s-app == 'elastic-operator'
      namespaceSelector: name == 'tigera-eck-operator'
  - action: Allow
    destination:
      ports: [9200]
    protocol: TCP
    # If the node CIDRs are known they can be added to this rule to restrict access to just the nodes in the cluster
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule allows to communicate with tigera-dex.
      namespaceSelector: projectcalico.org/name == 'tigera-dex'
      selector: k8s-app == 'tigera-dex'
      ports: [5556]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule allows to communicate with 'tigera-secure-es-gateway'.
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      selector: k8s-app == 'tigera-secure-es-gateway'
      ports: [5554]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows egress to the kubernetes api server.
      services:
        name: kubernetes
        namespace: default
---

# Allow internal communication within the ElasticSearch cluster
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.elasticsearch-internal
  namespace: tigera-elasticsearch
spec:
  order: 1
  tier: allow-tigera
  selector: elasticsearch.k8s.elastic.co/cluster-name == 'tigera-secure'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: elasticsearch.k8s.elastic.co/cluster-name == 'tigera-secure'
    destination:
      ports: [9300]
  egress:
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows communicate with elastic search.
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      selector: elasticsearch.k8s.elastic.co/cluster-name == 'tigera-secure'
      ports: [9300]
---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.elasticsearch-metrics
  namespace: tigera-elasticsearch
spec:
  tier: allow-tigera
  order: 1
  selector: k8s-app == "tigera-elasticsearch-metrics"
  serviceAccountSelector: ''
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: (app == 'prometheus' && prometheus == 'calico-node-prometheus') || (app.kubernetes.io/name == 'prometheus' && prometheus == 'calico-node-prometheus')
      namespaceSelector: projectcalico.org/name == "tigera-prometheus"
    destination:
      ports:
      - '9081'
  egress:
  - action: Allow
    protocol: TCP
    source: {}
    destination:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: projectcalico.org/name == "tigera-elasticsearch"
      ports:
      - '5554'
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows egress to the kubernetes api server.
      services:
        name: kubernetes
        namespace: default

---

# Allow access to Kibana
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.kibana-access
  namespace: tigera-kibana
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-secure'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      # This policy allows access to Kibana from anywhere via IPv4.
      # Narrow this down to your management network or remove this
      # policy to block access to Kibana.
      nets: ["0.0.0.0/0"]
    destination:
      ports: [5601]
  - action: Allow
    protocol: TCP
    source:
      # This policy allows access to Kibana from anywhere via IPv4.
      # Narrow this down to your management network or remove this
      # policy to block access to Kibana.
      nets: ["::/0"]
    destination:
      ports: [5601]
  - action: Allow
    protocol: TCP
    source:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: name == 'tigera-elasticsearch'
    destination:
      ports: [5601]
  - action: Allow
    destination:
      ports: [5601]
    protocol: TCP
    source:
      selector: k8s-app == 'elastic-operator'
      namespaceSelector: name == 'tigera-eck-operator'
    # If the node CIDRs are known they can be added to this rule to restrict access to just the nodes in the cluster
  egress:
  - action: Allow
    protocol: TCP
    source: {}
    destination:
      selector: elasticsearch.k8s.elastic.co/cluster-name == 'tigera-secure'
      namespaceSelector: projectcalico.org/name == "tigera-elasticsearch"
      ports: [9200]
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows egress to the kubernetes api server.
      services:
        name: kubernetes
        namespace: default
  - action: Allow
    destination:
      ports: [5554]
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: name == 'tigera-elasticsearch'
    protocol: TCP

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.intrusion-detection-controller
  namespace: tigera-intrusion-detection
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'intrusion-detection-controller'
  types:
    - Ingress
    - Egress
  ingress:
  # Intrusion detection controller doesn't listen on any external ports
  - action: Deny
  egress:
  # Block any link local IPs, e.g. cloud metadata, which are often targets
  # of server-side request forgery (SSRF) attacks
  - action: Deny
    protocol: TCP
    destination:
      nets:
      - "169.254.0.0/16"
  - action: Deny
    protocol: TCP
    destination:
      nets:
      - "fe80::/10"
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      ports: [5554]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows tigera-intrusion-detection to communicate with kubernetes api server.
      namespaceSelector: projectcalico.org/name == 'default'
      selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
      # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
      # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
      ports: [443, 6443, 12388]
  # Pass to subsequent tiers for further enforcement
  - action: Pass

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.anomaly-detection-api
  namespace: tigera-intrusion-detection
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'anomaly-detection-api'
  types:
    - Ingress
    - Egress
  ingress:
    # Allow incoming connections from AD pods on port :8080
    - action: Allow
      protocol: TCP
      source:
        selector: tigera.io.detector-cycle == 'detection'
        namespaceSelector: projectcalico.org/name == 'tigera-intrusion-detection'
      destination:
        ports: [8080]
    - action: Allow
      protocol: TCP
      source:
        selector: tigera.io.detector-cycle == 'training'
        namespaceSelector: projectcalico.org/name == 'tigera-intrusion-detection'
      destination:
        ports: [8080]
  egress:
    - action: Allow
      protocol: UDP
      destination:
        # This rule allows to communicate with openshift-dns in udp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This rule allows to communicate with openshift-dns in tcp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This egress rule in this policy allows anomaly-detection-api to communicate with kubernetes api server.
        namespaceSelector: projectcalico.org/name == 'default'
        selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
        # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
        # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
        ports: [443, 6443, 12388]

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.anomaly-detectors
  namespace: tigera-intrusion-detection
spec:
  order: 1
  tier: allow-tigera
  selector: (tigera.io.detector-cycle == 'training' || tigera.io.detector-cycle == 'detection')
  types:
    - Ingress
    - Egress
  ingress:
    # Allow incoming connections from AD pods on port :8080
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'anomaly-detection-api'
        namespaceSelector: projectcalico.org/name == 'tigera-intrusion-detection'
  egress:
    - action: Allow
      protocol: UDP
      destination:
        # This rule allows to communicate with openshift-dns in udp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This rule allows to communicate with openshift-dns in tcp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This egress rule in this policy allows anomaly-detectors to communicate with kubernetes api server.
        namespaceSelector: projectcalico.org/name == 'default'
        selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
        # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
        # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
        ports: [443, 6443, 12388]
    - action: Allow
      protocol: TCP
      destination:
        ports: [5554, 9200]
        selector: k8s-app == 'tigera-secure-es-gateway'
        namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
    - action: Allow
      protocol: TCP
      destination:
        ports: [8080]
        selector:  k8s-app == 'anomaly-detection-api'
        namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.allow-fluentd-node
  namespace: tigera-fluentd
spec:
  tier: allow-tigera
  order: 1
  selector: k8s-app == 'fluentd-node' || k8s-app == 'fluentd-node-windows'
  serviceAccountSelector: ''
  types:
    - Ingress
    - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: (app == 'prometheus' && prometheus == 'calico-node-prometheus') || (app.kubernetes.io/name == 'prometheus' && prometheus == 'calico-node-prometheus')
      namespaceSelector: projectcalico.org/name == "tigera-prometheus"
    destination:
      ports:
      - '9081'
  egress:
  - action: Deny
    protocol: TCP
    source: {}
    destination:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: projectcalico.org/name == "tigera-elasticsearch"
      notPorts: [5554]
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.allow-tigera-dex
  namespace: tigera-dex
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-dex'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'tigera-manager'
        namespaceSelector: name == 'tigera-manager'
      destination:
        ports: [5556]
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'tigera-secure-es-gateway'
        namespaceSelector: name == 'tigera-elasticsearch'
      destination:
        ports: [5556]
    - action: Allow
      destination:
        ports: [5556]
      protocol: TCP
      source:
        selector: k8s-app == 'compliance-server'
        namespaceSelector: name == 'tigera-compliance'
    - action: Allow
      destination:
        ports: [5556]
      protocol: TCP
      source:
        selector: k8s-app == 'tigera-packetcapture'
        namespaceSelector: name == 'tigera-packetcapture'
    - action: Allow
      destination:
        ports: [ 5556 ]
      protocol: TCP
      source:
        selector: prometheus == 'calico-node-prometheus'
        namespaceSelector: name == 'tigera-prometheus'
  egress:
    - action: Allow
      protocol: UDP
      destination:
        # This rule allows to communicate with openshift-dns in udp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This rule allows to communicate with openshift-dns in tcp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This egress rule in this policy allows tigera-dex to communicate with kubernetes api server.
        namespaceSelector: projectcalico.org/name == 'default'
        selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
        # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
        # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
        ports: [443, 6443, 12388]
    - action: Allow
      protocol: TCP
      destination:
        # This rule is intended to allow egress between dex and your identity provider. Modify it if your server runs on a non-standard port.
        ports: [443, 6443, 389, 636]
        # This subnet is added to represent the IPv4 address(es) where your identity provider is running. If you make this subnet
        # more specific, network policies are enforced to block egress to all addresses that do not correspond with your IdP.
        nets: ["0.0.0.0/0"]
    - action: Allow
      protocol: TCP
      destination:
        # This rule is intended to allow egress between dex and your identity provider. Modify it if your server runs on a non-standard port.
        ports: [443, 6443, 389, 636]
        # This subnet is added to represent the IPv6 address(es) where your identity provider is running. If you make this subnet
        # more specific, network policies are enforced to block egress to all addresses that do not correspond with your IdP.
        nets: ["::/0"]

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.allow-elastic-curator
  namespace: tigera-elasticsearch
spec:
  egress:
    - action: Allow
      protocol: UDP
      destination:
        # This rule allows to communicate with openshift-dns in udp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This rule allows to communicate with openshift-dns in tcp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      destination:
        namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
        ports: [5554]
        selector: k8s-app == 'tigera-secure-es-gateway'
      protocol: TCP
      source: {}
  order: 1
  selector: k8s-app == "elastic-curator"
  tier: allow-tigera
  types:
    - Ingress
    - Egress

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.intrusion-detection-elastic
  namespace: tigera-intrusion-detection
spec:
  order: 1
  tier: allow-tigera
  selector: job-name == 'intrusion-detection-es-job-installer'
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      ports: [5554]

---

# Allow kube-controllers to communicate with API server, DNS and elasticsearch.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.kube-controller-access
  namespace: calico-system
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'calico-kube-controllers'
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
      # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
      ports: [443, 6443, 12388]
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == 'tigera-manager'
      namespaceSelector: projectcalico.org/name == 'tigera-manager'
      ports: [9443]

---

# Allow kube-controllers to communicate with API server, DNS and elasticsearch.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.es-kube-controller-access
  namespace: calico-system
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'es-calico-kube-controllers'
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
      # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
      ports: [443, 6443, 12388]
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == 'tigera-secure-es-gateway'
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      ports: [5554]
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == 'tigera-manager'
      namespaceSelector: projectcalico.org/name == 'tigera-manager'
      ports: [9443]

---

# Allow the elastic-operator to communicate with API server, DNS and elastic search.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.elastic-operator-access
  namespace: tigera-eck-operator
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'elastic-operator'
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    destination:
      # This rule allows to communicate with openshift-dns in udp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This rule allows to communicate with openshift-dns in tcp.
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
  - action: Allow
    protocol: TCP
    destination:
      # This egress rule in this policy allows tigera api-server to communicate with kubernetes api server.
      namespaceSelector: projectcalico.org/name == 'default'
      selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
      # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
      # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
      ports: [443, 6443, 12388]
  - action: Allow
    protocol: TCP
    destination:
      selector: elasticsearch.k8s.elastic.co/cluster-name == 'tigera-secure'
      namespaceSelector: projectcalico.org/name == 'tigera-elasticsearch'
      ports: [9200]

---

# Allow internal communication to packetcapture-server from Manager.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.tigera-packetcapture
  namespace: tigera-packetcapture
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-packetcapture'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: k8s-app == 'tigera-manager'
        namespaceSelector: name == 'tigera-manager'
      destination:
        ports: [8444]
  egress:
    - action: Allow
      protocol: TCP
      destination:
        # This egress rule in this policy allows packetcapture to communicate with kubernetes api server.
        namespaceSelector: projectcalico.org/name == 'default'
        selector: (provider == 'kubernetes' && component == 'apiserver' && endpoints.projectcalico.org/serviceName == 'kubernetes')
        # By default, kubernetes api server listens on [12388, 6443, 443]. If Api server is customized to listen
        # on different port, Include the port number below. DockerEE uses port 12388 for kubernetes apiserver service.
        ports: [443, 6443, 12388]
    - action: Allow
      protocol: UDP
      destination:
        # This rule allows to communicate with openshift-dns in udp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This rule allows to communicate with openshift-dns in tcp.
        namespaceSelector: projectcalico.org/name == "openshift-dns"
        selector: dns.operator.openshift.io/daemonset-dns == "default"
        ports: [5353]
    - action: Allow
      protocol: TCP
      destination:
        # This egress rule allows to communicate with tigera-dex.
        namespaceSelector: projectcalico.org/name == 'tigera-dex'
        selector: k8s-app == 'tigera-dex'
        ports: [5556]

---

# Allow internal communication from tigera-dpi to apiserver, coredns and elasticsearch.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.tigera-dpi
  namespace: tigera-dpi
spec:
  order: 1
  tier: allow-tigera
  selector: k8s-app == 'tigera-dpi'
  types:
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      services:
        namespace: default
        name: kubernetes
  - action: Allow
    protocol: UDP
    destination:
      services:
        namespace: default
        name: openshift-dns
  - action: Allow
    protocol: TCP
    destination:
      services:
        namespace: tigera-elasticsearch
        name: tigera-secure-es-gateway-http

---

kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-tigera.default-deny
  namespace: tigera-elasticsearch
spec:
  tier: allow-tigera
  selector: all()
  types:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-tigera.default-deny
  namespace: tigera-kibana
spec:
  tier: allow-tigera
  selector: all()
  types:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-tigera.default-deny
  namespace: tigera-intrusion-detection
spec:
  tier: allow-tigera
  selector: all()
  types:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-tigera.default-deny
  namespace: tigera-manager
spec:
  tier: allow-tigera
  selector: all()
  types:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-tigera.default-deny
  namespace: tigera-compliance
spec:
  tier: allow-tigera
  selector: all()
  types:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-tigera.default-deny
  namespace: tigera-prometheus
spec:
  tier: allow-tigera
  selector: all()
  types:
  - Ingress
  - Egress

---

kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: allow-tigera.default-deny
  namespace: tigera-dex
spec:
  tier: allow-tigera
  selector: all()
  types:
    - Ingress
    - Egress
